# sidex

./: .editorconfig  .gitignore  .prettierignore  ARCHITECTURE.md  eslint.config.js  extensions-meta.json  index.html  package.json  port_manifest.json  rustfmt.toml  vite.config.ts
.github/workflows/: audit.yml  build.yml  fmt.yml  lint-js.yml  lint-rust.yml  release.yml  test.yml  udeps.yml
crates/sidex-terminal/src/: pty.rs
docs/: pitch-deck.md
examples/hello-extension/: Cargo.toml  sidex.toml
examples/hello-extension/src/: lib.rs
extensions-rust/: Cargo.toml
extensions-rust/cpp-language-extension/: Cargo.toml  sidex.toml
extensions-rust/cpp-language-extension/src/: lib.rs
extensions-rust/css-language-extension/: Cargo.toml  sidex.toml
extensions-rust/css-language-extension/src/: lib.rs
extensions-rust/go-language-extension/: Cargo.toml  sidex.toml
extensions-rust/go-language-extension/src/: lib.rs
extensions-rust/python-language-extension/: Cargo.toml  sidex.toml
extensions-rust/python-language-extension/src/: lib.rs
extensions-rust/rust-language-extension/: Cargo.toml  sidex.toml
extensions-rust/rust-language-extension/src/: lib.rs
extensions-rust/typescript-language-extension/: Cargo.toml  sidex.toml
public/: builtin-extensions.js
sidex-extension-sdk/: Cargo.toml
sidex-extension-sdk/src/: lib.rs
sidex-extension-sdk/wit/: world.wit
src/: main.ts
src-tauri/: Cargo.toml  build.rs
src-tauri/extension-host/: host.cjs  server.cjs
src-tauri/src/: lib.rs
src/vs/: amdX.ts
src/vscode-dts/: vscode.d.ts
(+114 files in other folders)
