[package]
name = "sidex-extension-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building native SideX extensions in Rust (WASM Component Model)"
license = "MIT"
repository = "https://github.com/sidenai/sidex"

[dependencies]
wit-bindgen = "0.41"

[lib]
crate-type = ["cdylib", "rlib"]
